[REFACTOR] Change unittest based on code analysis